# wikijs-export

./: .gitignore  LICENSE  README.txt  pyproject.toml
wikijs-export/: __init__.py  __main__.py  config.py  parser.py
