[tool.poetry]
name = "wikijs-scripts"
version = "0.1.1"
description = "Automation Script"
authors = ["Jagger Estep"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
pendulum = "^2.1.2"
pandoc = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
